--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,7 +3,7 @@
     <a class="header-logo" href="./index.html" aria-label="Your Energy home">
       <img
         class="header-logo-img"
-        src="./images/logo-dark.svg"
+        src="./img/logo-dark.svg"
         alt="Your Energy"
         width="132"
         height="24"
@@ -51,7 +51,7 @@
           aria-label="Instagram"
         >
           <img
-            src="./images/icons/instagram-outer-dark.svg"
+            src="./img/icons/instagram-outer-dark.svg"
             alt=""
             width="28"
             height="28"
